# Medical_assistant

./: .gitignore  README.md  pyproject.toml
Data/: reports.json
Notebooks/: agent.ipynb
app/: frontend.py
app/backend/: backend.py  main.py
src/: config.py
src/Rag/: chunk_docs.py  data.py  embed.py  ingest.py  retrieve.py  text_cleaner.py
src/Rag/agent/: agent.py  utils.py
src/infrastructure/: meta.json
src/logger/: logg.py
