[project]
name = "medicare"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.120.4",
    "ipykernel>=7.1.0",
    "langchain>=1.0.3",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.0.0",
    "langchain-huggingface>=1.0.0",
    "langchain-qdrant>=1.1.0",
    "langchain-tavily>=0.2.12",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "pypdf>=6.1.3",
    "sentence-transformers>=5.1.2",
    "sseclient-py>=1.8.0",
    "streamlit>=1.51.0",
    "tqdm>=4.67.1",
    "uvicorn>=0.38.0",
]
